# T10_R01_C01_A01

./: .gitignore  README.md  profiles.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/vidpack/: __init__.py  cli.py  profiles.py  runner.py
tests/: test_profiles.py
