[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vidpack"
version = "0.1.0"
description = "Profile-driven FFmpeg wrapper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vidpack = "vidpack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
